<resources>
    <string name="app_name">FYP BOOKING APPLICATION</string>
    <string name="Home">Home</string>
    <string name="Booking">Booking</string>
    <string name="Profile">Profile</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="textView">TextView</string>
    <string name="example">Example</string>
    <string name="required">Required</string>
    <string name="nullField">Null</string>

    <!-- Admin Nav Bar -->
    <string name="management">MANAGEMENT</string>
    <string name="transactions">TRANSACTIONS</string>
    <string name="system">SYSTEM</string>
    <string name="history">HISTORY</string>
    <string name="pending">PENDING</string>
    <string name="all">ALL</string>
    <string name="acc">ACCESSORIES</string>
    <string name="racket">RACKET</string>
    <string name="etc">ETC</string>

    <string name="admin">Admin</string>
    <string name="coach">Coach</string>
    <string name="trainingClass">Class</string>
    <string name="court">Court</string>
    <string name="product">Product</string>
    <string name="notification">Notification</string>
    <string name="voucher">Voucher</string>
    <string name="redeem">Redeem</string>
    <string name="booking">Booking</string>
    <string name="purchase">Purchase</string>
    <string name="signOut">Sign Out</string>

    <!-- Add Item -->
    <string name="name">Name</string>
    <string name="desc">Description</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="image">Image</string>
    <string name="qty">Quantity</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="gender">Gender</string>
    <string name="phoneNo">Phone No.</string>
    <string name="exp">Experience</string>
    <string name="email">Email</string>
    <string name="id">ID</string>
    <string name="amount">Amount</string>
    <string name="status">Status</string>
    <string name="courtID">Court ID</string>
    <string name="userID">User ID</string>
    <string name="classCoach">Entitled Coach</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="refCode">Referral Code</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="userType">User Type</string>
    <string name="dateTime">Date / Time</string>

    <!-- ACTIVITY/FRAGMENT HEADINGS -->
    <string name="addCoach">ADD COACH</string>
    <string name="addProduct">ADD PRODUCT</string>
    <string name="addClass">ADD TRAINING CLASS</string>
    <string name="addNotif">ADD NOTIFICATION</string>
    <string name="purchaseDetail">PURCHASE DETAIL</string>
    <string name="productDetail">PRODUCT DETAIL</string>
    <string name="bookingDetail">BOOKING DETAIL</string>
    <string name="classDetail">CLASS DETAIL</string>
    <string name="coachDetail">COACH DETAIL</string>
    <string name="notifDetail">NOTIFICATION DETAIL</string>

    <!-- System -->
    <string name="finish">Finish</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="approve">Approve</string>
    <string name="decline">Decline</string>
    <string name="send">Send</string>
    <string name="selectImage">Click to Select Image</string>
    <string name="addTimeslot">Click Here to Add Timeslots</string>
    <string name="sendReminder">Send Reminder</string>
    <string name="newData">Enter New Data</string>
    <string name="newCourtName">Enter Court Nane</string>
    <string name="newCourtPrice">Enter Court Price</string>
    <string name="newReason">Enter Reason</string>
    <string name="timeslotA">Timeslot A (From 10am w/ 1hr Interval)</string>
    <string name="timeslotB">Timeslot B (From 10am w/ 2hr Interval)</string>

    <!--RecyclerView -->
    <string name="timeslot">Timeslot</string>
    <string name="availability">Availability</string>
    <string name="className">Class Name</string>
    <string name="productName">Product Name</string>
    <string name="bookingDate">Booking Date</string>
    <string name="bookingTime">Booking Time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>