<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="vertical">


    <EditText
        android:id="@+id/courtNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/newCourtName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="4"
        android:singleLine="true"
        android:textColorHint="#757575"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />

    <RadioGroup
        android:id="@+id/courtTimeslotField"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <RadioButton
            android:id="@+id/rdbtnTimeslot1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeslotA" />

        <RadioButton
            android:id="@+id/rdbtnTimeslot2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeslotB" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvCourtPrice"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_margin="4dp"
        android:gravity="center_vertical"
        android:padding="4dp"
        android:text="@string/textView"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>