<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAdminClassDetail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="80dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvClassID"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_margin="4dp"
                        android:gravity="center|end"
                        android:text="@string/id"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvClassName"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_margin="4dp"
                        android:gravity="center|end"
                        android:text="@string/name"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvClassDesc"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_margin="4dp"
                        android:gravity="center|end"
                        android:text="@string/desc"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvClassPrice"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_margin="4dp"
                        android:gravity="center|end"
                        android:text="@string/price"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvClassDate"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_margin="4dp"
                        android:gravity="center|end"
                        android:text="@string/date"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvClassTime"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_margin="4dp"
                        android:gravity="center|end"
                        android:text="@string/time"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvClassCoach"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_margin="4dp"
                        android:gravity="center|end"
                        android:text="@string/classCoach"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/tfClassID"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_margin="4dp"
                        android:enabled="false"
                        android:hint="@string/id"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:textColor="@drawable/edit_text_selector"
                        android:textSize="14sp"
                        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                    <EditText
                        android:id="@+id/tfClassName"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_margin="4dp"
                        android:enabled="false"
                        android:hint="@string/name"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:textColor="@drawable/edit_text_selector"
                        android:textSize="14sp"
                        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                    <EditText
                        android:id="@+id/tfClassDesc"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_margin="4dp"
                        android:enabled="false"
                        android:hint="@string/desc"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:textColor="@drawable/edit_text_selector"
                        android:textSize="14sp"
                        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                    <EditText
                        android:id="@+id/tfClassPrice"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_margin="4dp"
                        android:enabled="false"
                        android:hint="@string/price"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:textColor="@drawable/edit_text_selector"
                        android:textSize="14sp"
                        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                    <EditText
                        android:id="@+id/tfClassDate"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_margin="4dp"
                        android:enabled="false"
                        android:hint="@string/date"
                        android:importantForAutofill="no"
                        android:inputType="date"
                        android:textColor="@drawable/edit_text_selector"
                        android:textSize="14sp"
                        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                    <EditText
                        android:id="@+id/tfClassTime"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_margin="4dp"
                        android:enabled="false"
                        android:hint="@string/time"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName|time"
                        android:textColor="@drawable/edit_text_selector"
                        android:textSize="14sp"
                        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                    <EditText
                        android:id="@+id/tfClassCoach"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_margin="4dp"
                        android:enabled="false"
                        android:hint="@string/coach"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:textColor="@drawable/edit_text_selector"
                        android:textSize="14sp"
                        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvClassDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/classDetail"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/cardAdminClassDetail"
            app:layout_constraintStart_toStartOf="@+id/cardAdminClassDetail" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swUpdateClass"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/update"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/cardAdminClassDetail"
            app:layout_constraintEnd_toEndOf="@+id/cardAdminClassDetail"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/imgBtnDeleteClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/btn_circle"
            android:contentDescription="@string/delete"
            app:layout_constraintEnd_toEndOf="@+id/cardAdminClassDetail"
            app:layout_constraintTop_toBottomOf="@+id/cardAdminClassDetail"
            app:srcCompat="@drawable/ic_admin_delete_white"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/imgBtnUpdateClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/btn_circle"
            android:contentDescription="@string/update"
            app:layout_constraintEnd_toStartOf="@+id/imgBtnDeleteClass"
            app:layout_constraintTop_toTopOf="@+id/imgBtnDeleteClass"
            app:srcCompat="@drawable/ic_admin_update30"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvBackClassDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/back"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_admin_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
