<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".backend.AdminCoachAddFragment">

            <ImageButton
                android:id="@+id/imgBtnAddCoach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@null"
                android:contentDescription="@string/add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_admin_add_black"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <ScrollView
                android:id="@+id/scrollViewAddCoach"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="70dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/coachNameContainer"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/name"
                        app:endIconMode="clear_text"
                        app:helperText="@string/required"
                        app:helperTextTextColor="@color/red_decline">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tfAddCoachName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:lines="1"
                            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/coachEmailContainer"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/email"
                        app:endIconMode="clear_text"
                        app:helperText="@string/required"
                        app:helperTextTextColor="@color/red_decline">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tfAddCoachEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:lines="1"
                            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/coachPhoneContainer"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/phoneNo"
                        app:counterEnabled="true"
                        app:counterMaxLength="11"
                        app:endIconMode="clear_text"
                        app:helperText="@string/required"
                        app:helperTextTextColor="@color/red_decline"
                        app:prefixText="+6">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tfAddCoachPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:lines="1"
                            android:maxLength="11"
                            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/exp"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/spinnerExpField"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        tools:ignore="SpeakableTextPresentCheck">

                    </Spinner>
                </LinearLayout>
            </ScrollView>

            <TextView
                android:id="@+id/tvBackCoachAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/back"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_admin_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>
